# mfp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: Build.yml  Publish.yml  ci.yml  rebuild-release-assets.yml  release.yml
src/: args.rs  main.rs  mfp.rs  mp3_stream_decoder.rs  utils.rs
