[package]
name = "mfp"
description = "A command-line utility for playing music mixes for programming & focus (from musicforprogramming.net), unlocking the flow state!"
version = "0.3.2"
authors = ["Rohit Gupta"]
edition = "2021"
readme = "README.md"

homepage = "https://github.com/guptarohit/mfp"
repository = "https://github.com/guptarohit/mfp"

keywords = ["cli", "music", "utility", "command-line", "musicforprogramming"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"


[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
rss = "2.0.12"
rodio = "0.17.1"
rand = "0.8.5"
minimp3_fixed = "0.5.4"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29"
indicatif = "0.17.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
